wifi(xml): Enable config_vendor_wifi_softap_owe_supported
This change enables config_vendor_wifi_softap_owe_supported by
default.

Change-Id: Id99e3789d49c3b98545477e5b77696e4eb02962d
CRs-Fixed: 2773984

--- a/service/res/values/config.xml
+++ b/service/res/values/config.xml
@@ -211,7 +211,7 @@
     <bool translatable="false" name="config_wifi_softap_sae_supported">false</bool>
 
     <!-- Wifi driver supports Opportunistic Wireless Encryption (OWE) for softap -->
-    <bool translatable="false" name="config_vendor_wifi_softap_owe_supported">false</bool>
+    <bool translatable="false" name="config_vendor_wifi_softap_owe_supported">true</bool>
 
     <!-- Wifi driver supports IEEE80211AC for softap -->
     <bool translatable="false" name="config_wifi_softap_ieee80211ac_supported">false</bool>
